fixing alignment in nav

--- a/css/style.css
+++ b/css/style.css
@@ -13,20 +13,18 @@ body {
 
 .navbar-brand {
     font-size: 24px;
-    position: absolute;
-    top: 15px;
-    left: 150px;
+    line-height: 60px;
+    height: 90px;
 }
 
 #nav-items {
-    display: inline-block;
+    display: table-row;
     height: 90px;
 }
 
 #select-elements{
-    position: absolute;
-    top: 25px;
-    left: 350px;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 select {
